# HPC

./: 04_2025.csv  04_2025_short.csv  05_2025.csv  CMakeLists.txt  README.md  README.me  metadata.txt  only1000.csv  only64.csv  test.sh
shapefiles/: contenidoShapefile.py  procesado.dbf  procesado.shp  procesado.shx
src/: CMakeLists.txt  algoritmo_a.cpp  algoritmo_a.hpp  algoritmo_b.cpp  algoritmo_b.hpp  common_constants.hpp  csv_reader.cpp  csv_reader.hpp  estadistica.cpp  estadistica.hpp  franja_horaria.cpp  franja_horaria.hpp  log.hpp  main.cpp  main2.cpp  mpi_datatypes.cpp  mpi_datatypes.hpp  municipio_mapper.cpp  municipio_mapper.hpp  registro_extendido.hpp  shapefile_loader.cpp  shapefile_loader.hpp  umbral.cpp  umbral.hpp  umbral_manager.cpp  umbral_manager.hpp  util.hpp
